footer o pie de pagina listo para todas las secciones

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,9 @@ body {
     color: #000000;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.header {
-    display: flex;
+
+
+.footer img{
+    width: 100px;
+    border-radius: 20px;
 }
