--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,8 +9,9 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+
 .mainAlbum .margen {
-    padding-bottom: 10px;
+    padding: 10px;
 }
 
 .mainVideos iframe {
@@ -24,7 +25,7 @@ body {
     padding-bottom: 2px;
 }
 .aside img{
-    width: 20%;
+    width: 30%;
     padding-top: 10px;
     border-radius: 20px;
 }
